[gd_scene load_steps=46 format=3 uid="uid://8vyi52u1it48"]

[ext_resource type="Script" path="res://Script/main.gd" id="1_881hs"]
[ext_resource type="Texture2D" uid="uid://fm8msb86msot" path="res://Art Assets/Background.png" id="2_m8nip"]
[ext_resource type="Texture2D" uid="uid://c42b6a17n1760" path="res://Art Assets/Window.png" id="3_ioxsv"]
[ext_resource type="PackedScene" uid="uid://du25gbhfvxjon" path="res://Scene/blood_can.tscn" id="4_rlkn5"]
[ext_resource type="PackedScene" uid="uid://b0nont26ebbv" path="res://Scene/cauldron.tscn" id="5_l8gno"]
[ext_resource type="PackedScene" uid="uid://brd7g7p68sc3d" path="res://Scene/tree.tscn" id="6_fx5dj"]
[ext_resource type="Texture2D" uid="uid://b0ubuxy2puntm" path="res://Art Assets/Coin Pouch.png" id="8_4amqd"]
[ext_resource type="Script" path="res://Script/Products.gd" id="8_220xr"]
[ext_resource type="Texture2D" uid="uid://dq7o53dt2uobs" path="res://Art Assets/Growth/Plant Growth Spite_23.png" id="9_7d8di"]
[ext_resource type="Texture2D" uid="uid://cinsvcn2e5rqe" path="res://Art Assets/Growth/Plant Growth Spite_24.png" id="10_1qapa"]
[ext_resource type="Texture2D" uid="uid://p4ia6em87nup" path="res://Art Assets/Growth/Plant Growth Spite_25.png" id="11_kguo2"]
[ext_resource type="Texture2D" uid="uid://bqqappbaqmete" path="res://Art Assets/Growth/Plant Growth Spite_26.png" id="12_8elak"]
[ext_resource type="Texture2D" uid="uid://bvwwr1ljdpww1" path="res://Art Assets/Growth/Plant Growth Spite_22.png" id="13_ixnn3"]
[ext_resource type="PackedScene" uid="uid://cf8dvdle3388t" path="res://Scene/table.tscn" id="14_l1lg3"]
[ext_resource type="PackedScene" uid="uid://jrr0st0j5dx8" path="res://Scene/Shop_pots.tscn" id="15_t36j6"]
[ext_resource type="PackedScene" uid="uid://bo73r42gcrfnv" path="res://Scene/Shop_Upgrade.tscn" id="16_7m4gi"]
[ext_resource type="PackedScene" uid="uid://bo8k6pfmcbe00" path="res://Scene/Shop_Seeds.tscn" id="17_xx6uo"]
[ext_resource type="Texture2D" uid="uid://5si1gad3nh8f" path="res://Art Assets/White.png" id="18_wveum"]
[ext_resource type="PackedScene" uid="uid://deymlppnnrqie" path="res://Scene/frog.tscn" id="20_w4hbl"]
[ext_resource type="PackedScene" uid="uid://cl7vj3ximt1ub" path="res://Scene/stick.tscn" id="21_cuu7l"]
[ext_resource type="Script" path="res://Script/Tutorial_Cauldron_up.gd" id="22_aqirp"]
[ext_resource type="Texture2D" uid="uid://bmlhmt7t7w06a" path="res://Art Assets/Potion Shelf.png" id="23_hou6n"]
[ext_resource type="Texture2D" uid="uid://b6eqik2ps65eo" path="res://Art Assets/Filter.png" id="23_r216g"]
[ext_resource type="Script" path="res://Script/Tutorial.gd" id="24_56m8r"]
[ext_resource type="Texture2D" uid="uid://x3mys5flm3pv" path="res://Art Assets/Stick.png" id="25_l555u"]
[ext_resource type="Script" path="res://Script/Tutorial_Plant.gd" id="26_kyvvg"]
[ext_resource type="Texture2D" uid="uid://b7o4sjpft8icq" path="res://Art Assets/Extras_1.png" id="28_m8ru2"]
[ext_resource type="Script" path="res://Script/Extras.gd" id="28_x0lbe"]
[ext_resource type="Texture2D" uid="uid://d3kc0yqj5tta2" path="res://Art Assets/Extras_2.png" id="29_fpp86"]
[ext_resource type="Texture2D" uid="uid://dm6vdfdo7yuvr" path="res://Art Assets/Extras_3.png" id="30_ylbbw"]
[ext_resource type="AudioStream" uid="uid://dea6g7tqycsy3" path="res://Audio/Ghost Choir.mp3" id="33_fjyjp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hnnvw"]
size = Vector2(984, 304)

[sub_resource type="CircleShape2D" id="CircleShape2D_3h6o0"]
radius = 65.6201

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dkstr"]
size = Vector2(355, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oaepy"]
size = Vector2(350, 619)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gbged"]
size = Vector2(133, 772)

[sub_resource type="Animation" id="Animation_sihkd"]
resource_name = "drag"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Eye:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-835, -433), Vector2(-481, 173), Vector2(-481, 173), Vector2(-481, 380)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 1.1, 1.3, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-832, -263), Vector2(-493, 186), Vector2(-493, 186), Vector2(-493, 380)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Stick2:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.5001, 1.8, 2.1, 2.4, 2.7, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-413, 284), Vector2(-535, 280), Vector2(-413, 284), Vector2(-535, 280), Vector2(-413, 284), Vector2(-535, 280)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lty1d"]
_data = {
"drag": SubResource("Animation_sihkd")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8xwod"]
size = Vector2(144.5, 284)

[sub_resource type="CircleShape2D" id="CircleShape2D_innsl"]
radius = 78.1025

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqolp"]
size = Vector2(115, 263)

[sub_resource type="Animation" id="Animation_mqrtw"]
resource_name = "Sunrise"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/Night:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.00784314, 0.2, 0.313726, 0.54902), Color(0.00784314, 0.2, 0.313726, 0)]
}

[sub_resource type="Animation" id="Animation_ioca6"]
resource_name = "Sunset"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/Sunset:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.878431, 0.380392, 0.25098, 0), Color(0.878431, 0.380392, 0.25098, 0.219608)]
}

[sub_resource type="Animation" id="Animation_qewsi"]
resource_name = "night_time"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lights/Sunset:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.878431, 0.380392, 0.25098, 0.219608), Color(0.878431, 0.380392, 0.25098, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lights/Night:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.00784314, 0.2, 0.313726, 0), Color(0.00784314, 0.2, 0.313726, 0.54902)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a2alo"]
_data = {
"Sunrise": SubResource("Animation_mqrtw"),
"Sunset": SubResource("Animation_ioca6"),
"night_time": SubResource("Animation_qewsi")
}

[node name="Main" type="Node"]
script = ExtResource("1_881hs")
metadata/_edit_vertical_guides_ = []

[node name="Camera2D" type="Camera2D" parent="."]

[node name="ClockTimer" type="Timer" parent="."]
wait_time = 180.0
autostart = true

[node name="Background" type="Sprite2D" parent="."]
z_index = -5
texture = ExtResource("2_m8nip")

[node name="Window" type="Sprite2D" parent="."]
z_index = 2
position = Vector2(-458, -246)
texture = ExtResource("3_ioxsv")

[node name="BloodCan" parent="." instance=ExtResource("4_rlkn5")]
z_index = 8
position = Vector2(553, 453)

[node name="Cauldron" parent="." instance=ExtResource("5_l8gno")]
z_index = 20
position = Vector2(-489, 382)

[node name="HangingArea2D" type="Area2D" parent="." groups=["platform_hanging"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HangingArea2D"]
position = Vector2(281, -706)
shape = SubResource("RectangleShape2D_hnnvw")

[node name="Tree" parent="." instance=ExtResource("6_fx5dj")]

[node name="CoinPouch" type="Sprite2D" parent="."]
position = Vector2(-862, 436)
texture = ExtResource("8_4amqd")

[node name="Money" type="Label" parent="."]
offset_left = -930.0
offset_top = 411.0
offset_right = -794.0
offset_bottom = 510.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 45
text = "0000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Products" type="Node2D" parent="."]
script = ExtResource("8_220xr")

[node name="Sprite2D" type="Sprite2D" parent="Products"]
position = Vector2(-875, -379)
texture = ExtResource("9_7d8di")

[node name="Sprite2D2" type="Sprite2D" parent="Products"]
position = Vector2(-870, -223)
scale = Vector2(1.2, 1.2)
texture = ExtResource("10_1qapa")

[node name="Sprite2D3" type="Sprite2D" parent="Products"]
position = Vector2(-866, 99)
scale = Vector2(0.9, 0.9)
texture = ExtResource("11_kguo2")

[node name="Sprite2D4" type="Sprite2D" parent="Products"]
position = Vector2(-875, -59)
texture = ExtResource("12_8elak")

[node name="Sprite2D5" type="Sprite2D" parent="Products"]
position = Vector2(-870, 261)
texture = ExtResource("13_ixnn3")

[node name="Label0" type="Label" parent="Products"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -843.0
offset_top = -371.0
offset_right = -785.0
offset_bottom = -299.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00"

[node name="Label1" type="Label" parent="Products"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -844.0
offset_top = -218.0
offset_right = -786.0
offset_bottom = -146.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00"

[node name="Label2" type="Label" parent="Products"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -838.0
offset_top = -60.0
offset_right = -780.0
offset_bottom = 12.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00"

[node name="Label3" type="Label" parent="Products"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -843.0
offset_top = 111.0
offset_right = -785.0
offset_bottom = 183.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00"

[node name="Label4" type="Label" parent="Products"]
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -853.0
offset_top = 275.0
offset_right = -795.0
offset_bottom = 347.0
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "00"

[node name="Node2D2" type="Node2D" parent="Products"]
position = Vector2(1155, 207)

[node name="Eye_Area2D" type="Area2D" parent="Products/Node2D2"]
position = Vector2(-1155, -207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Products/Node2D2/Eye_Area2D"]
position = Vector2(-872, -375)
shape = SubResource("CircleShape2D_3h6o0")

[node name="hand_Area2D" type="Area2D" parent="Products/Node2D2"]
position = Vector2(-1155, -207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Products/Node2D2/hand_Area2D"]
position = Vector2(-872, -220)
shape = SubResource("CircleShape2D_3h6o0")

[node name="Foot_Area2D" type="Area2D" parent="Products/Node2D2"]
position = Vector2(-1155, -207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Products/Node2D2/Foot_Area2D"]
position = Vector2(-867, -67)
shape = SubResource("CircleShape2D_3h6o0")

[node name="Skull_Area2D" type="Area2D" parent="Products/Node2D2"]
position = Vector2(-1155, -207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Products/Node2D2/Skull_Area2D"]
position = Vector2(-865, 96)
shape = SubResource("CircleShape2D_3h6o0")

[node name="Heart_Area2D" type="Area2D" parent="Products/Node2D2"]
position = Vector2(-1155, -207)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Products/Node2D2/Heart_Area2D"]
position = Vector2(-875, 269)
shape = SubResource("CircleShape2D_3h6o0")

[node name="Table" parent="." instance=ExtResource("14_l1lg3")]
position = Vector2(391, 284)

[node name="Shops" type="Node2D" parent="."]

[node name="Shop_Pots" parent="Shops" instance=ExtResource("15_t36j6")]
position = Vector2(1154, -60)

[node name="Shop_Upgrade" parent="Shops" instance=ExtResource("16_7m4gi")]
position = Vector2(1154, -152)

[node name="Shop_Seeds" parent="Shops" instance=ExtResource("17_xx6uo")]
position = Vector2(1154, 36)

[node name="Day" type="Label" parent="."]
offset_left = -937.0
offset_top = -531.0
offset_right = -875.0
offset_bottom = -438.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Day: 1"

[node name="Frog" parent="." instance=ExtResource("20_w4hbl")]
z_index = -4
position = Vector2(-97, 453)

[node name="Stick" parent="." instance=ExtResource("21_cuu7l")]
position = Vector2(-501, 158)

[node name="PotionShelf" type="Node2D" parent="."]
z_index = -4
position = Vector2(-465, 75)

[node name="Sprite2D" type="Sprite2D" parent="PotionShelf"]
texture = ExtResource("23_hou6n")

[node name="Area2D" type="Area2D" parent="PotionShelf" groups=["potion_shelf"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotionShelf/Area2D"]
position = Vector2(0.5, 39)
shape = SubResource("RectangleShape2D_dkstr")

[node name="Area2D3" type="StaticBody2D" parent="PotionShelf"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotionShelf/Area2D3"]
position = Vector2(0.5, 40)
shape = SubResource("RectangleShape2D_dkstr")

[node name="Area2D2" type="Area2D" parent="PotionShelf" groups=["potion_boarder"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotionShelf/Area2D2"]
position = Vector2(-1, -260.5)
shape = SubResource("RectangleShape2D_oaepy")

[node name="Tutorial_Cauldron_up" type="Node2D" parent="."]
visible = false
script = ExtResource("22_aqirp")

[node name="Area2D2" type="Area2D" parent="Tutorial_Cauldron_up"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Cauldron_up/Area2D2"]
position = Vector2(-864.5, -46)
shape = SubResource("RectangleShape2D_gbged")

[node name="Label2" type="Label" parent="Tutorial_Cauldron_up"]
offset_left = -228.0
offset_top = 18.0
offset_right = 255.0
offset_bottom = 162.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 40
text = "You can mix 3 crops now!"
horizontal_alignment = 1

[node name="Tutorial_Potion" type="Node2D" parent="."]
z_index = 10
script = ExtResource("24_56m8r")

[node name="Stick2" type="Sprite2D" parent="Tutorial_Potion"]
position = Vector2(-413, 284)
texture = ExtResource("25_l555u")

[node name="Label" type="Label" parent="Tutorial_Potion"]
offset_left = -678.0
offset_top = 129.0
offset_right = -273.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 50
text = "Drag a crop here
and Stir
"
horizontal_alignment = 1

[node name="Eye" type="Sprite2D" parent="Tutorial_Potion"]
z_index = 9
position = Vector2(-835, -433)
texture = ExtResource("9_7d8di")

[node name="Hand" type="Sprite2D" parent="Tutorial_Potion"]
z_index = 9
position = Vector2(-832, -263)
scale = Vector2(1.13437, 1.10938)
texture = ExtResource("10_1qapa")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Tutorial_Potion"]
libraries = {
"": SubResource("AnimationLibrary_lty1d")
}

[node name="Area2D" type="Area2D" parent="Tutorial_Potion"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Potion/Area2D"]
position = Vector2(-865, -300)
shape = SubResource("RectangleShape2D_8xwod")

[node name="Tutorial_Plant" type="Node2D" parent="."]
script = ExtResource("26_kyvvg")

[node name="Label" type="Label" parent="Tutorial_Plant"]
offset_left = -268.0
offset_top = 302.0
offset_right = 137.0
offset_bottom = 446.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Feed frog seeds, 
pots or potions"
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="Tutorial_Plant/Label"]
position = Vector2(268, -302)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Plant/Label/Area2D"]
position = Vector2(-57, 499)
shape = SubResource("CircleShape2D_innsl")

[node name="Label2" type="Label" parent="Tutorial_Plant"]
offset_left = 513.0
offset_top = 46.0
offset_right = 918.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Pull the tabs
to open shops
Pot first, then seed"
horizontal_alignment = 1

[node name="Area2D2" type="Area2D" parent="Tutorial_Plant/Label2"]
position = Vector2(-553, -117)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Plant/Label2/Area2D2"]
position = Vector2(943.5, 278.5)
shape = SubResource("RectangleShape2D_uqolp")

[node name="Label3" type="Label" parent="Tutorial_Plant"]
visible = false
offset_left = 157.0
offset_top = 460.0
offset_right = 562.0
offset_bottom = 604.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Plants need BLOOD"
horizontal_alignment = 1

[node name="Area2D2" type="Area2D" parent="Tutorial_Plant/Label3"]
position = Vector2(-504, -128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Plant/Label3/Area2D2"]
position = Vector2(988.375, 105.375)
shape = SubResource("RectangleShape2D_uqolp")

[node name="Label4" type="Label" parent="Tutorial_Plant"]
visible = false
offset_left = 32.0
offset_top = -29.0
offset_right = 462.0
offset_bottom = 115.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Some plants need 
bigger pots"
horizontal_alignment = 2

[node name="Area2D2" type="Area2D" parent="Tutorial_Plant/Label4"]
position = Vector2(-392, -100)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tutorial_Plant/Label4/Area2D2"]
position = Vector2(1217, 581)
shape = SubResource("RectangleShape2D_uqolp")

[node name="Extras" type="Node2D" parent="."]
script = ExtResource("28_x0lbe")

[node name="Extras1" type="Sprite2D" parent="Extras"]
z_index = -5
position = Vector2(-193, 135)
texture = ExtResource("28_m8ru2")

[node name="Extras2" type="Sprite2D" parent="Extras"]
z_index = -5
position = Vector2(228, 146)
texture = ExtResource("29_fpp86")

[node name="Extras3" type="Sprite2D" parent="Extras"]
z_index = -5
position = Vector2(564, 301)
texture = ExtResource("30_ylbbw")

[node name="Lights" type="Node2D" parent="."]

[node name="Night" type="Sprite2D" parent="Lights"]
modulate = Color(0.00784314, 0.2, 0.313726, 0)
z_index = 50
scale = Vector2(21.1229, 10.9333)
texture = ExtResource("18_wveum")

[node name="Sunset" type="Sprite2D" parent="Lights"]
modulate = Color(0.878431, 0.380392, 0.25098, 0)
z_index = 50
scale = Vector2(21.1229, 10.9333)
texture = ExtResource("18_wveum")

[node name="Filter" type="Sprite2D" parent="Lights"]
modulate = Color(1, 1, 1, 0.266667)
texture = ExtResource("23_r216g")

[node name="DayColors" type="AnimationPlayer" parent="Lights"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_a2alo")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("33_fjyjp")
volume_db = -3.0
autoplay = true

[connection signal="timeout" from="ClockTimer" to="." method="_on_clock_timer_timeout"]
[connection signal="input_event" from="Products/Node2D2/Eye_Area2D" to="Products" method="_on_parts_area_2d_input_event" binds= [0]]
[connection signal="input_event" from="Products/Node2D2/hand_Area2D" to="Products" method="_on_parts_area_2d_input_event" binds= [1]]
[connection signal="input_event" from="Products/Node2D2/Foot_Area2D" to="Products" method="_on_parts_area_2d_input_event" binds= [2]]
[connection signal="input_event" from="Products/Node2D2/Skull_Area2D" to="Products" method="_on_parts_area_2d_input_event" binds= [3]]
[connection signal="input_event" from="Products/Node2D2/Heart_Area2D" to="Products" method="_on_parts_area_2d_input_event" binds= [9]]
[connection signal="input_event" from="Tutorial_Cauldron_up/Area2D2" to="Tutorial_Cauldron_up" method="_on_area_2d_2_input_event"]
[connection signal="input_event" from="Tutorial_Potion/Area2D" to="Tutorial_Potion" method="_on_area_2d_input_event"]
[connection signal="area_entered" from="Tutorial_Plant/Label/Area2D" to="Tutorial_Plant" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Tutorial_Plant/Label/Area2D" to="Tutorial_Plant" method="_on_area_2d_area_exited"]
[connection signal="input_event" from="Tutorial_Plant/Label2/Area2D2" to="Tutorial_Plant" method="_on_area_2d_2_input_event"]
[connection signal="input_event" from="Tutorial_Plant/Label3/Area2D2" to="Tutorial_Plant" method="_on_area_2d_2_input_event2"]
[connection signal="input_event" from="Tutorial_Plant/Label4/Area2D2" to="Tutorial_Plant" method="_on_area_2d_2_input_event3"]
